image-analyzer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-analyzer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-analyzer
  template:
    metadata:
      labels:
        app: image-analyzer
    spec:
      containers:
        - image: rkosir123/image-analyzer:8.1
          name: image-analyzer
          ports:
            - containerPort: 8082
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
---

apiVersion: v1
kind: Service
metadata:
  name: image-analyzer
spec:
  type: ClusterIP
  ports:
    - port: 8082
      protocol: TCP
      targetPort: server
  selector:
    app: image-analyzer
